--- a/react-native-app/.env.template
+++ b/react-native-app/.env.template
@@ -1,4 +1,3 @@
-# duplicate this and rename to .env
-# .env is gitignored
+# duplicate this and rename to .env (.env is gitignored)
 SUPABASE_URL=''
 SUPABASE_ANON_KEY=''
