--- a/react-native-app/package.json
+++ b/react-native-app/package.json
@@ -38,6 +38,7 @@
     "babel-plugin-module-resolver": "^5.0.0",
     "eslint": "^8.19.0",
     "eslint-config-prettier": "^8.9.0",
+    "eslint-plugin-import": "^2.28.0",
     "jest": "^29.2.1",
     "metro-react-native-babel-preset": "0.76.7",
     "prettier": "^2.4.1",
