--- a/react-native-app/tsconfig.json
+++ b/react-native-app/tsconfig.json
@@ -3,12 +3,12 @@
   "compilerOptions": {
     "baseUrl": ".",
     "paths": {
-      "@assets/*": ["./src/assets/*"],
-      "@components/*": ["src/components/*"],
-      "@screens/*": ["src/screens/*"],
-      "@theme/*": ["src/theme/*"],
-      "@utils/*": ["src/utils/*"],
-      "@navigators/*": ["src/navigators/*"]
+      "assets/*": ["./src/assets/*"],
+      "components/*": ["src/components/*"],
+      "screens/*": ["src/screens/*"],
+      "theme/*": ["src/theme/*"],
+      "utils/*": ["src/utils/*"],
+      "navigators/*": ["src/navigators/*"]
   },
   }
 }
