--- a/react-native-app/.env.template
+++ b/react-native-app/.env.template
@@ -1,3 +1,5 @@
 # duplicate this and rename to .env (.env is gitignored)
-SB_URL=''
+# temporary hack - select beteween localhost or prod. restart metro for it to take effect
+# SB_URL='https://evsqlmjsaibcaccunysk.supabase.co'
+SB_URL='http://localhost:54321'
 SB_ANON_KEY=''
