--- a/react-native-app/tsconfig.json
+++ b/react-native-app/tsconfig.json
@@ -4,11 +4,12 @@
     "baseUrl": ".",
     "paths": {
       "assets/*": ["./src/assets/*"],
-      "components/*": ["src/components/*"],
-      "screens/*": ["src/screens/*"],
-      "theme/*": ["src/theme/*"],
-      "utils/*": ["src/utils/*"],
-      "navigators/*": ["src/navigators/*"]
+      "components/*": ["./src/components/*"],
+      "navigators/*": ["./src/navigators/*"],
+      "requests": ["./src/requests"],
+      "screens/*": ["./src/screens/*"],
+      "theme/*": ["./src/theme/*"],
+      "utils/*": ["./src/utils/*"]
   },
   }
 }
