--- a/react-native-app/package.json
+++ b/react-native-app/package.json
@@ -6,7 +6,8 @@
     "android": "react-native run-android",
     "ios": "react-native run-ios",
     "lint": "eslint .",
-    "start": "react-native start",
+    "start:local": "APP_ENV=local npx react-native start",
+    "start:prod": "APP_ENV=prod npx react-native start",
     "test": "jest"
   },
   "dependencies": {
