--- a/react-native-app/android/app/build.gradle
+++ b/react-native-app/android/app/build.gradle
@@ -121,3 +121,9 @@ dependencies {
 }
 
 apply from: file("../../node_modules/@react-native-community/cli-platform-android/native_modules.gradle"); applyNativeModulesAppBuildGradle(project)
+
+// required config for react-native-vector-icons extensions
+project.ext.vectoricons = [
+    iconFontNames: [ 'Feather.ttf', 'Foundation.ttf', 'Ionicons.ttf', 'Octicons.ttf' ]
+]
+apply from: file("../../node_modules/react-native-vector-icons/fonts.gradle")
