--- a/react-native-app/package.json
+++ b/react-native-app/package.json
@@ -28,6 +28,7 @@
     "react-native-reanimated": "^3.3.0",
     "react-native-safe-area-context": "^4.7.1",
     "react-native-screens": "^3.22.1",
+    "react-native-svg": "^13.13.0",
     "react-native-url-polyfill": "^2.0.0",
     "react-native-vector-icons": "^10.0.0"
   },
