--- a/react-native-app/package.json
+++ b/react-native-app/package.json
@@ -13,22 +13,22 @@
   },
   "dependencies": {
     "@gorhom/bottom-sheet": "^4.6.0",
-    "@react-native-async-storage/async-storage": "1.18.2",
-    "@react-native-community/datetimepicker": "7.2.0",
+    "@react-native-async-storage/async-storage": "1.21.0",
+    "@react-native-community/datetimepicker": "7.6.1",
     "@react-navigation/drawer": "^6.6.6",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/stack": "^6.3.20",
     "@shopify/restyle": "^2.4.2",
     "@supabase/supabase-js": "^2.39.3",
-    "expo": "~49.0.15",
-    "expo-status-bar": "~1.6.0",
+    "expo": "^50.0.2",
+    "expo-status-bar": "~1.11.1",
     "react": "18.2.0",
-    "react-native": "0.72.6",
-    "react-native-reanimated": "~3.3.0",
-    "react-native-svg": "13.9.0",
+    "react-native": "0.73.2",
+    "react-native-gesture-handler": "~2.14.0",
+    "react-native-reanimated": "~3.6.0",
+    "react-native-svg": "14.1.0",
     "react-native-url-polyfill": "^2.0.0",
-    "react-native-vector-icons": "^10.0.3",
-    "react-native-gesture-handler": "~2.12.0"
+    "react-native-vector-icons": "^10.0.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
