--- a/react-native-app/package.json
+++ b/react-native-app/package.json
@@ -35,6 +35,7 @@
     "@types/react": "~18.2.14",
     "@types/react-native-vector-icons": "^6.4.18",
     "babel-plugin-module-resolver": "^5.0.0",
+    "react-native-svg-transformer": "^1.3.0",
     "typescript": "^5.1.3"
   },
   "private": true
