--- a/react-native-app/package.json
+++ b/react-native-app/package.json
@@ -9,12 +9,16 @@
     "android:dev": "sh setenv.sh dev && expo start --android",
     "ios:prod": "sh setenv.sh prod && expo start --ios",
     "ios:dev": "sh setenv.sh dev && expo start --ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "test": "sh setenv.sh dev && jest",
+    "test:silent": "sh setenv.sh dev && jest --silent"
+
   },
   "dependencies": {
     "@gorhom/bottom-sheet": "^4.6.0",
     "@react-native-async-storage/async-storage": "1.21.0",
     "@react-native-community/datetimepicker": "7.6.1",
+    "@react-navigation/core": "^6.4.10",
     "@react-navigation/drawer": "^6.6.6",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/stack": "^6.3.20",
@@ -22,6 +26,8 @@
     "@supabase/supabase-js": "^2.39.3",
     "expo": "^50.0.2",
     "expo-status-bar": "~1.11.1",
+    "jest": "^29.3.1",
+    "jest-expo": "~50.0.1",
     "react": "18.2.0",
     "react-native": "0.73.2",
     "react-native-gesture-handler": "~2.14.0",
@@ -32,6 +38,8 @@
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
+    "@testing-library/react-native": "^12.4.3",
+    "@types/jest": "^29.5.11",
     "@types/react": "~18.2.14",
     "@types/react-native-vector-icons": "^6.4.18",
     "babel-plugin-module-resolver": "^5.0.0",
