--- a/react-native-app/package.json
+++ b/react-native-app/package.json
@@ -22,6 +22,7 @@
     "@react-navigation/stack": "^6.3.20",
     "@shopify/restyle": "^2.4.2",
     "@supabase/supabase-js": "^2.39.3",
+    "@tanstack/react-query": "^5.17.19",
     "expo": "^50.0.3",
     "expo-status-bar": "~1.11.1",
     "jest": "^29.3.1",
