--- a/react-native-app/package.json
+++ b/react-native-app/package.json
@@ -27,6 +27,7 @@
     "expo-status-bar": "~1.11.1",
     "jest": "^29.3.1",
     "jest-expo": "~50.0.1",
+    "lodash.debounce": "^4.0.8",
     "react": "18.2.0",
     "react-native": "0.73.2",
     "react-native-gesture-handler": "~2.14.0",
@@ -39,6 +40,7 @@
     "@babel/core": "^7.20.0",
     "@testing-library/react-native": "^12.4.3",
     "@types/jest": "^29.5.11",
+    "@types/lodash.debounce": "^4.0.9",
     "@types/react": "~18.2.14",
     "@types/react-native-vector-icons": "^6.4.18",
     "babel-plugin-module-resolver": "^5.0.0",
