Refactor and add build config for compiled dev and prod releases (#32)
* build config for dev and prod versions

* remove expo dev client for now

--- a/react-native-app/app.json
+++ b/react-native-app/app.json
@@ -1,10 +1,10 @@
 {
   "expo": {
-    "name": "react-native-app",
-    "slug": "react-native-app",
+    "name": "Transit",
+    "slug": "transit",
     "version": "1.0.0",
     "orientation": "portrait",
-    "icon": "./assets/icon.png",
+    "icon": "./assets/App_store_1024_1x.png",
     "userInterfaceStyle": "dark",
     "splash": {
       "image": "./assets/splash.png",
@@ -15,7 +15,8 @@
       "**/*"
     ],
     "ios": {
-      "supportsTablet": true
+      "supportsTablet": false,
+      "bundleIdentifier": "com.mikejonas.transit"
     },
     "android": {
       "adaptiveIcon": {
@@ -25,6 +26,22 @@
     },
     "web": {
       "favicon": "./assets/favicon.png"
-    }
+    },
+    "extra": {
+      "eas": {
+        "projectId": "f989fee3-5f29-4aed-81ca-e4371422b9e3"
+      }
+    },
+    "plugins": [
+      [
+        "@sentry/react-native/expo",
+        {
+          "url": "https://sentry.io/",
+          "organization": "mike-jonas",
+          "project": "transit-app"
+        }
+      ]
+    ],
+    "owner": "mikejonas"
   }
 }
