--- a/react-native-app/package.json
+++ b/react-native-app/package.json
@@ -23,18 +23,21 @@
     "@shopify/restyle": "^2.4.2",
     "@supabase/supabase-js": "^2.39.3",
     "@tanstack/react-query": "^5.17.19",
-    "expo": "^50.0.3",
+    "expo": "~50.0.6",
     "expo-status-bar": "~1.11.1",
     "jest": "^29.3.1",
-    "jest-expo": "~50.0.1",
+    "jest-expo": "~50.0.2",
     "lodash.debounce": "^4.0.8",
     "react": "18.2.0",
-    "react-native": "0.73.2",
+    "react-native": "0.73.4",
     "react-native-gesture-handler": "~2.14.0",
     "react-native-reanimated": "^3.6.2",
     "react-native-svg": "14.1.0",
     "react-native-url-polyfill": "^2.0.0",
-    "react-native-vector-icons": "^10.0.3"
+    "react-native-vector-icons": "^10.0.3",
+    "@sentry/react-native": "5.17.0",
+    "react-native-screens": "~3.29.0",
+    "react-native-safe-area-context": "4.8.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
