--- a/aws-services/cdk/package.json
+++ b/aws-services/cdk/package.json
@@ -9,22 +9,33 @@
     "watch": "tsc -w",
     "test": "jest",
     "synth": "cdk synth --no-staging > template.yaml",
-    "start-api": "npm run build && npm run synth && sam local start-api",
+    "start-api": "npm run synth && sam local start-api -t template.yaml",
+    "sam-build": "sam build --use-container",
+    "nodemon-reload": "nodemon --watch src --ext ts --exec 'npm run synth'",
     "diff": "cdk diff --profile transit_team",
     "deploy": "cdk deploy --profile transit_team"
   },
   "devDependencies": {
+    "@types/aws-lambda": "^8.10.134",
     "@types/jest": "^29.5.12",
     "@types/node": "20.11.17",
-    "jest": "^29.7.0",
-    "ts-jest": "^29.1.2",
     "aws-cdk": "2.129.0",
+    "esbuild": "^0.20.1",
+    "jest": "^29.7.0",
+    "nodemon": "^3.1.0",
+    "ts-jest": "^29.1.2",
     "ts-node": "^10.9.2",
     "typescript": "~5.3.3"
   },
   "dependencies": {
+    "@aws-cdk/aws-lambda-nodejs": "^1.204.0",
+    "@googlemaps/google-maps-services-js": "^3.3.42",
+    "@supabase/supabase-js": "^2.39.7",
     "aws-cdk-lib": "2.129.0",
+    "aws-lambda": "^1.0.7",
     "constructs": "^10.0.0",
+    "dotenv": "^16.4.5",
+    "openai": "^4.28.0",
     "source-map-support": "^0.5.21"
   }
 }
