--- a/package.json
+++ b/package.json
@@ -5,11 +5,18 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
+    "develop:supabase": "cd supabase/functions && npx supabase start -x imgproxy,storage-api",
+    "develop:react-native": "cd react-native-app && npm run start:dev",
+    "develop:aws": "npm-run-all --parallel start:aws-api watch:node-lambdas",
+    "start:aws-api": "cd aws-services/cdk && npm run start-api",
+    "watch:node-lambdas": "cd aws-services/cdk && npm run nodemon-reload",
+    "stop:supabase": "cd supabase/functions && npx supabase stop",
     "prepare": "husky install"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "husky": "^8.0.0"
+    "husky": "^8.0.0",
+    "npm-run-all": "^4.1.5"
   }
 }
