Cleanup lambda workflow (#37)
* Lambda development workflow

* simplify npm scripts

* Python workflow

--- a/aws-services/cdk/package.json
+++ b/aws-services/cdk/package.json
@@ -9,7 +9,7 @@
     "watch": "tsc -w",
     "test": "jest",
     "synth": "cdk synth --no-staging > template.yaml",
-    "start-api": "npm run synth && sam local start-api -t template.yaml",
+    "start-api": "npm run synth && sam local start-api -t template.yaml --warm-containers EAGER",
     "sam-build": "sam build --use-container",
     "nodemon-reload": "nodemon --watch src --ext ts --exec 'npm run synth'",
     "diff": "cdk diff --profile transit_team",
@@ -29,9 +29,11 @@
   },
   "dependencies": {
     "@aws-cdk/aws-lambda-nodejs": "^1.204.0",
+    "@aws-cdk/aws-lambda-python": "^1.204.0",
+    "@aws-cdk/aws-lambda-python-alpha": "^2.130.0-alpha.0",
     "@googlemaps/google-maps-services-js": "^3.3.42",
     "@supabase/supabase-js": "^2.39.7",
-    "aws-cdk-lib": "2.129.0",
+    "aws-cdk-lib": "2.130.0",
     "aws-lambda": "^1.0.7",
     "constructs": "^10.0.0",
     "dotenv": "^16.4.5",
