--- a/aws-services/cdk/package.json
+++ b/aws-services/cdk/package.json
@@ -8,18 +8,20 @@
     "build": "tsc",
     "watch": "tsc -w",
     "test": "jest",
-    "synth": "cdk synth --no-staging > template.yaml",
+    "synth": "dotenv -e ../.env.local -- cdk synth --no-staging > template.yaml",
     "start-api": "npm run synth && sam local start-api -t template.yaml --warm-containers EAGER",
     "sam-build": "sam build --use-container",
     "nodemon-reload": "nodemon --watch src --ext ts --exec 'npm run synth'",
-    "diff": "cdk diff --profile transit_team",
-    "deploy": "cdk deploy --profile transit_team"
+    "diff": "dotenv -e ../.env -- cdk diff --profile transit_team",
+    "deploy": "dotenv -e ../.env -- cdk deploy --profile transit_team"
   },
   "devDependencies": {
     "@types/aws-lambda": "^8.10.134",
     "@types/jest": "^29.5.12",
+    "@types/jsonwebtoken": "^9.0.6",
     "@types/node": "20.11.17",
     "aws-cdk": "2.129.0",
+    "dotenv-cli": "^7.3.0",
     "esbuild": "^0.20.1",
     "jest": "^29.7.0",
     "nodemon": "^3.1.0",
@@ -37,6 +39,7 @@
     "aws-lambda": "^1.0.7",
     "constructs": "^10.0.0",
     "dotenv": "^16.4.5",
+    "jsonwebtoken": "^9.0.2",
     "openai": "^4.28.0",
     "source-map-support": "^0.5.21"
   }
