--- a/react-native-app/package.json
+++ b/react-native-app/package.json
@@ -3,15 +3,10 @@
   "version": "1.0.0",
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
-    "start:prod": "sh setenv.sh prod && expo start",
-    "start:dev": "sh setenv.sh dev && expo start",
-    "android:prod": "sh setenv.sh prod && expo start --android",
-    "android:dev": "sh setenv.sh dev && expo start --android",
-    "ios:prod": "sh setenv.sh prod && expo start --ios",
-    "ios:dev": "sh setenv.sh dev && expo start --ios",
-    "web": "expo start --web",
-    "test": "sh setenv.sh dev && jest",
-    "test:silent": "sh setenv.sh dev && jest --silent"
+    "start:development": "NODE_ENV=development expo start",
+    "start:production": "NODE_ENV=production expo start",
+    "test": "dotenv -e .env.development jest",
+    "test:silent": "dotenv -e .env.development jest --silent"
   },
   "dependencies": {
     "@gorhom/bottom-sheet": "^4.6.0",
@@ -20,6 +15,7 @@
     "@react-navigation/drawer": "^6.6.6",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/stack": "^6.3.20",
+    "@sentry/react-native": "5.17.0",
     "@shopify/restyle": "^2.4.2",
     "@supabase/supabase-js": "^2.39.3",
     "@tanstack/react-query": "^5.17.19",
@@ -32,12 +28,11 @@
     "react-native": "0.73.4",
     "react-native-gesture-handler": "~2.14.0",
     "react-native-reanimated": "^3.6.2",
+    "react-native-safe-area-context": "4.8.2",
+    "react-native-screens": "~3.29.0",
     "react-native-svg": "14.1.0",
     "react-native-url-polyfill": "^2.0.0",
-    "react-native-vector-icons": "^10.0.3",
-    "@sentry/react-native": "5.17.0",
-    "react-native-screens": "~3.29.0",
-    "react-native-safe-area-context": "4.8.2"
+    "react-native-vector-icons": "^10.0.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
