--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "license": "ISC",
   "devDependencies": {
     "@types/node": "^20.11.24",
+    "dotenv-cli": "^7.3.0",
     "husky": "^8.0.0",
     "npm-run-all": "^4.1.5",
     "ts-node": "^10.9.2",
