--- a/react-native-app/package.json
+++ b/react-native-app/package.json
@@ -5,8 +5,8 @@
   "scripts": {
     "start:development": "NODE_ENV=development expo start",
     "start:production": "NODE_ENV=production expo start",
-    "test": "dotenv -e .env.development jest",
-    "test:silent": "dotenv -e .env.development jest --silent"
+    "test": "dotenv -e .env.development -- jest",
+    "test:silent": "dotenv -e .env.development -- jest --silent"
   },
   "dependencies": {
     "@gorhom/bottom-sheet": "^4.6.0",
@@ -15,11 +15,11 @@
     "@react-navigation/drawer": "^6.6.6",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/stack": "^6.3.20",
-    "@sentry/react-native": "5.17.0",
+    "@sentry/react-native": "5.19.1",
     "@shopify/restyle": "^2.4.2",
     "@supabase/supabase-js": "^2.39.3",
     "@tanstack/react-query": "^5.17.19",
-    "expo": "~50.0.6",
+    "expo": "^50.0.8",
     "expo-status-bar": "~1.11.1",
     "jest": "^29.3.1",
     "jest-expo": "~50.0.2",
