--- a/react-native-app/package.json
+++ b/react-native-app/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "start:development": "NODE_ENV=development expo start",
     "start:production": "NODE_ENV=production expo start",
+    "build:preview:ios": "eas build -p ios --profile preview",
     "test": "dotenv -e .env.development -- jest",
     "test:silent": "dotenv -e .env.development -- jest --silent"
   },
@@ -32,7 +33,8 @@
     "react-native-screens": "~3.29.0",
     "react-native-svg": "14.1.0",
     "react-native-url-polyfill": "^2.0.0",
-    "react-native-vector-icons": "^10.0.3"
+    "react-native-vector-icons": "^10.0.3",
+    "expo-dev-client": "~3.3.9"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
